--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "0b361f98-d840-4807-923d-bfb16258322c"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
